# light-editor-vidz

./: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: ci.yml  pages.yml  release.yml
crates/scene-core/: Cargo.toml
crates/scene-core/src/: animate.rs  ffmpeg_path.rs  lib.rs  model.rs  paths.rs  project.rs  raster.rs  timeline.rs
crates/scene-core/tests/: golden_fixture.rs
design_handoff_lighteditorvidz/: LightEditorVidz.dc.html  README.md
docs/: index.html
fixtures/: animation-golden.json
scripts/: install.sh  uninstall.sh
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: assets.rs  export.rs  mod.rs  project.rs  stock.rs
src-tauri/src/export/: ffmpeg.rs  mod.rs
src/components/: Editor.tsx  Home.css  Home.tsx  NewProjectModal.css  NewProjectModal.tsx
src/components/editor/: AppMenu.tsx  AudioPlayer.tsx  CanvasStage.tsx  CategoryRail.tsx  ColorPickerField.tsx  ElementInteraction.tsx  ElementViews.tsx  ExportModal.tsx  LibraryPanel.tsx  PropertiesPanel.tsx  SettingsModal.tsx  ShapeView.tsx  Timeline.tsx  TopBar.tsx  UpdateStatus.tsx  editor.css  types.ts
src/components/editor/properties/: AnimationFields.tsx  AudioProperties.tsx  BlendModeField.tsx  (+9 more)
src/lib/: animate.test.ts  animate.ts  animateGolden.test.ts  assetUrl.ts  audio.test.ts  audio.ts  commands.ts  elements.test.ts  elements.ts  format.test.ts  format.ts  history.test.ts  history.ts  legacyImport.test.ts  legacyImport.ts  mediaCache.test.ts  mediaCache.ts  pointerDrag.ts  settings.ts  timeline.test.ts  timeline.ts  timelineGolden.test.ts
src/locales/: en.json  fr.json
src/styles/: tokens.css
