[package]
name = "scene-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "scene_core"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "12"
uuid = { version = "1", features = ["v4", "serde"] }
tiny-skia = "0.12"
cosmic-text = "0.19"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
